--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 </section>
 <footer>
   <div class="container clearfix">
-    <p><span class="alignleft small">© 2017, Georgy. All Rights Reserved.</span> <span class="alignright small">Connect with me&nbsp;&nbsp;&nbsp; <a href="https://www.facebook.com/djgoga84" target="_blank" class="social_icon facebook"></a> <a href="https://www.linkedin.com/in/georgy-gurtskaya-143090152/" target="_blank" class="social_icon linkedin"></a> <a href="https://vk.com/ggo95" target="_blink" class="social_icon vk" aria-hidden="true"></a> </span> </p>
+    <p><span class="alignleft small">© 2017, James Cooper. All Rights Reserved.</span> <span class="alignright small">Connect with me&nbsp;&nbsp;&nbsp; <a href="https://www.instagram.com/bodytransformationlondon/" target="_blank" class="social_icon instagram"></a> <a href="https://www.linkedin.com/in/james-cooper-7a1abbab/" target="_blank" class="social_icon linkedin"></a> </span> </p>
   </div>
 </footer>
 <script src="js/jquery-1.11.2.min.js" type="text/javascript"></script>
